# Gen-Adapt-Ref-for-Hexmeshing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
code/: adaptive_grid.cpp  adaptive_grid.h  cino_cgal_interface.cpp  cino_cgal_interface.h  polycube_grid_maker.cpp  polycube_grid_maker.h  sanity_check.cpp  sanity_check.h  split_metrics.cpp  split_metrics.h  surface_grid_maker.cpp  surface_grid_maker.h  utils.cpp  utils.h
code/hex_transitions_install/: find_transition_verts.cpp  find_transition_verts.h  install.cpp  install.h
code/mesh_projection/: project.cpp  project.h
code/solvers/: constraints.cpp  constraints.h  solver_adaptive_grid.cpp  solver_adaptive_grid.h
